library/src/libqaccessible.h

typedef QAccessible::State QAccessible__State;
typedef struct QAccessibleActionInterface QAccessibleActionInterface;
typedef struct QAccessibleEditableTextInterface QAccessibleEditableTextInterface;
typedef struct QAccessibleHyperlinkInterface QAccessibleHyperlinkInterface;
typedef struct QAccessibleImageInterface QAccessibleImageInterface;
typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QAccessibleTableCellInterface QAccessibleTableCellInterface;
typedef struct QAccessibleTableInterface QAccessibleTableInterface;
typedef struct QAccessibleTextInterface QAccessibleTextInterface;
typedef struct QAccessibleValueInterface QAccessibleValueInterface;
typedef struct QAccessible__State QAccessible__State;
typedef struct QColor QColor;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QVariant QVariant;
typedef struct QWindow QWindow;
bool QAccessibleInterface_IsValid(const QAccessibleInterface* self);
QObject* QAccessibleInterface_Object(const QAccessibleInterface* self);
QWindow* QAccessibleInterface_Window(const QAccessibleInterface* self);
libqt_list /* of libqt_pair  tuple of QAccessibleInterface* and int  */ QAccessibleInterface_Relations(const QAccessibleInterface* self, int match);
QAccessibleInterface* QAccessibleInterface_FocusChild(const QAccessibleInterface* self);
QAccessibleInterface* QAccessibleInterface_ChildAt(const QAccessibleInterface* self, int x, int y);
QAccessibleInterface* QAccessibleInterface_Parent(const QAccessibleInterface* self);
QAccessibleInterface* QAccessibleInterface_Child(const QAccessibleInterface* self, int index);
int QAccessibleInterface_ChildCount(const QAccessibleInterface* self);
int QAccessibleInterface_IndexOfChild(const QAccessibleInterface* self, QAccessibleInterface* param1);
libqt_string QAccessibleInterface_Text(const QAccessibleInterface* self, int t);
void QAccessibleInterface_SetText(QAccessibleInterface* self, int t, libqt_string text);
QRect* QAccessibleInterface_Rect(const QAccessibleInterface* self);
int QAccessibleInterface_Role(const QAccessibleInterface* self);
QAccessible__State* QAccessibleInterface_State(const QAccessibleInterface* self);
QColor* QAccessibleInterface_ForegroundColor(const QAccessibleInterface* self);
QColor* QAccessibleInterface_BackgroundColor(const QAccessibleInterface* self);
QAccessibleTextInterface* QAccessibleInterface_TextInterface(QAccessibleInterface* self);
QAccessibleEditableTextInterface* QAccessibleInterface_EditableTextInterface(QAccessibleInterface* self);
QAccessibleValueInterface* QAccessibleInterface_ValueInterface(QAccessibleInterface* self);
QAccessibleActionInterface* QAccessibleInterface_ActionInterface(QAccessibleInterface* self);
QAccessibleImageInterface* QAccessibleInterface_ImageInterface(QAccessibleInterface* self);
QAccessibleTableInterface* QAccessibleInterface_TableInterface(QAccessibleInterface* self);
QAccessibleTableCellInterface* QAccessibleInterface_TableCellInterface(QAccessibleInterface* self);
QAccessibleHyperlinkInterface* QAccessibleInterface_HyperlinkInterface(QAccessibleInterface* self);
void QAccessibleInterface_VirtualHook(QAccessibleInterface* self, int id, void* data);
void* QAccessibleInterface_InterfaceCast(QAccessibleInterface* self, int param1);
void QAccessibleTextInterface_Selection(const QAccessibleTextInterface* self, int selectionIndex, int* startOffset, int* endOffset);
int QAccessibleTextInterface_SelectionCount(const QAccessibleTextInterface* self);
void QAccessibleTextInterface_AddSelection(QAccessibleTextInterface* self, int startOffset, int endOffset);
void QAccessibleTextInterface_RemoveSelection(QAccessibleTextInterface* self, int selectionIndex);
void QAccessibleTextInterface_SetSelection(QAccessibleTextInterface* self, int selectionIndex, int startOffset, int endOffset);
int QAccessibleTextInterface_CursorPosition(const QAccessibleTextInterface* self);
void QAccessibleTextInterface_SetCursorPosition(QAccessibleTextInterface* self, int position);
libqt_string QAccessibleTextInterface_Text(const QAccessibleTextInterface* self, int startOffset, int endOffset);
libqt_string QAccessibleTextInterface_TextBeforeOffset(const QAccessibleTextInterface* self, int offset, int boundaryType, int* startOffset, int* endOffset);
libqt_string QAccessibleTextInterface_TextAfterOffset(const QAccessibleTextInterface* self, int offset, int boundaryType, int* startOffset, int* endOffset);
libqt_string QAccessibleTextInterface_TextAtOffset(const QAccessibleTextInterface* self, int offset, int boundaryType, int* startOffset, int* endOffset);
int QAccessibleTextInterface_CharacterCount(const QAccessibleTextInterface* self);
QRect* QAccessibleTextInterface_CharacterRect(const QAccessibleTextInterface* self, int offset);
int QAccessibleTextInterface_OffsetAtPoint(const QAccessibleTextInterface* self, QPoint* point);
void QAccessibleTextInterface_ScrollToSubstring(QAccessibleTextInterface* self, int startIndex, int endIndex);
libqt_string QAccessibleTextInterface_Attributes(const QAccessibleTextInterface* self, int offset, int* startOffset, int* endOffset);
void QAccessibleTextInterface_OperatorAssign(QAccessibleTextInterface* self, QAccessibleTextInterface* param1);
void QAccessibleEditableTextInterface_DeleteText(QAccessibleEditableTextInterface* self, int startOffset, int endOffset);
void QAccessibleEditableTextInterface_InsertText(QAccessibleEditableTextInterface* self, int offset, libqt_string text);
void QAccessibleEditableTextInterface_ReplaceText(QAccessibleEditableTextInterface* self, int startOffset, int endOffset, libqt_string text);
void QAccessibleEditableTextInterface_OperatorAssign(QAccessibleEditableTextInterface* self, QAccessibleEditableTextInterface* param1);
QVariant* QAccessibleValueInterface_CurrentValue(const QAccessibleValueInterface* self);
void QAccessibleValueInterface_SetCurrentValue(QAccessibleValueInterface* self, QVariant* value);
QVariant* QAccessibleValueInterface_MaximumValue(const QAccessibleValueInterface* self);
QVariant* QAccessibleValueInterface_MinimumValue(const QAccessibleValueInterface* self);
QVariant* QAccessibleValueInterface_MinimumStepSize(const QAccessibleValueInterface* self);
void QAccessibleValueInterface_OperatorAssign(QAccessibleValueInterface* self, QAccessibleValueInterface* param1);
bool QAccessibleTableCellInterface_IsSelected(const QAccessibleTableCellInterface* self);
libqt_list /* of QAccessibleInterface* */ QAccessibleTableCellInterface_ColumnHeaderCells(const QAccessibleTableCellInterface* self);
libqt_list /* of QAccessibleInterface* */ QAccessibleTableCellInterface_RowHeaderCells(const QAccessibleTableCellInterface* self);
int QAccessibleTableCellInterface_ColumnIndex(const QAccessibleTableCellInterface* self);
int QAccessibleTableCellInterface_RowIndex(const QAccessibleTableCellInterface* self);
int QAccessibleTableCellInterface_ColumnExtent(const QAccessibleTableCellInterface* self);
int QAccessibleTableCellInterface_RowExtent(const QAccessibleTableCellInterface* self);
QAccessibleInterface* QAccessibleTableCellInterface_Table(const QAccessibleTableCellInterface* self);
void QAccessibleTableCellInterface_OperatorAssign(QAccessibleTableCellInterface* self, QAccessibleTableCellInterface* param1);