src/libqaccessible.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QAccessibleTableModelChangeEvent__ModelChangeType
{
	ModelReset = 0,
	DataChanged = 1,
	RowsInserted = 2,
	ColumnsInserted = 3,
	RowsRemoved = 4,
	ColumnsRemoved = 5,
}
public struct QAccessibleInterface
{
	[LinkName("QAccessibleInterface_IsValid")]
	public static extern bool QAccessibleInterface_IsValid(void* c_this);
	[LinkName("QAccessibleInterface_Object")]
	public static extern QObject QAccessibleInterface_Object(void* c_this);
	[LinkName("QAccessibleInterface_Window")]
	public static extern QWindow QAccessibleInterface_Window(void* c_this);
	[LinkName("QAccessibleInterface_Relations")]
	public static extern void*[] QAccessibleInterface_Relations(void* c_this, int64 match);
	[LinkName("QAccessibleInterface_FocusChild")]
	public static extern QAccessibleInterface QAccessibleInterface_FocusChild(void* c_this);
	[LinkName("QAccessibleInterface_ChildAt")]
	public static extern QAccessibleInterface QAccessibleInterface_ChildAt(void* c_this, int32 x, int32 y);
	[LinkName("QAccessibleInterface_Parent")]
	public static extern QAccessibleInterface QAccessibleInterface_Parent(void* c_this);
	[LinkName("QAccessibleInterface_Child")]
	public static extern QAccessibleInterface QAccessibleInterface_Child(void* c_this, int32 index);
	[LinkName("QAccessibleInterface_ChildCount")]
	public static extern int32 QAccessibleInterface_ChildCount(void* c_this);
	[LinkName("QAccessibleInterface_IndexOfChild")]
	public static extern int32 QAccessibleInterface_IndexOfChild(void* c_this, QAccessibleInterface param1);
	[LinkName("QAccessibleInterface_Text")]
	public static extern char8[] QAccessibleInterface_Text(void* c_this, int64 t);
	[LinkName("QAccessibleInterface_SetText")]
	public static extern void QAccessibleInterface_SetText(void* c_this, int64 t, char8[] text);
	[LinkName("QAccessibleInterface_Rect")]
	public static extern QRect QAccessibleInterface_Rect(void* c_this);
	[LinkName("QAccessibleInterface_Role")]
	public static extern int64 QAccessibleInterface_Role(void* c_this);
	[LinkName("QAccessibleInterface_State")]
	public static extern QAccessible__State QAccessibleInterface_State(void* c_this);
	[LinkName("QAccessibleInterface_ForegroundColor")]
	public static extern QColor QAccessibleInterface_ForegroundColor(void* c_this);
	[LinkName("QAccessibleInterface_BackgroundColor")]
	public static extern QColor QAccessibleInterface_BackgroundColor(void* c_this);
	[LinkName("QAccessibleInterface_TextInterface")]
	public static extern QAccessibleTextInterface QAccessibleInterface_TextInterface(void* c_this);
	[LinkName("QAccessibleInterface_EditableTextInterface")]
	public static extern QAccessibleEditableTextInterface QAccessibleInterface_EditableTextInterface(void* c_this);
	[LinkName("QAccessibleInterface_ValueInterface")]
	public static extern QAccessibleValueInterface QAccessibleInterface_ValueInterface(void* c_this);
	[LinkName("QAccessibleInterface_ActionInterface")]
	public static extern QAccessibleActionInterface QAccessibleInterface_ActionInterface(void* c_this);
	[LinkName("QAccessibleInterface_ImageInterface")]
	public static extern QAccessibleImageInterface QAccessibleInterface_ImageInterface(void* c_this);
	[LinkName("QAccessibleInterface_TableInterface")]
	public static extern QAccessibleTableInterface QAccessibleInterface_TableInterface(void* c_this);
	[LinkName("QAccessibleInterface_TableCellInterface")]
	public static extern QAccessibleTableCellInterface QAccessibleInterface_TableCellInterface(void* c_this);
	[LinkName("QAccessibleInterface_HyperlinkInterface")]
	public static extern QAccessibleHyperlinkInterface QAccessibleInterface_HyperlinkInterface(void* c_this);
	[LinkName("QAccessibleInterface_VirtualHook")]
	public static extern void QAccessibleInterface_VirtualHook(void* c_this, int32 id, void data);
	[LinkName("QAccessibleInterface_InterfaceCast")]
	public static extern void QAccessibleInterface_InterfaceCast(void* c_this, int64 param1);
	[LinkName("QAccessibleInterface_OperatorAssign")]
	public static extern void QAccessibleInterface_OperatorAssign(void* c_this, QAccessibleInterface param1);
}
public struct QAccessibleTextInterface
{
	[LinkName("QAccessibleTextInterface_Selection")]
	public static extern void QAccessibleTextInterface_Selection(void* c_this, int32 selectionIndex, int32 startOffset, int32 endOffset);
	[LinkName("QAccessibleTextInterface_SelectionCount")]
	public static extern int32 QAccessibleTextInterface_SelectionCount(void* c_this);
	[LinkName("QAccessibleTextInterface_AddSelection")]
	public static extern void QAccessibleTextInterface_AddSelection(void* c_this, int32 startOffset, int32 endOffset);
	[LinkName("QAccessibleTextInterface_RemoveSelection")]
	public static extern void QAccessibleTextInterface_RemoveSelection(void* c_this, int32 selectionIndex);
	[LinkName("QAccessibleTextInterface_SetSelection")]
	public static extern void QAccessibleTextInterface_SetSelection(void* c_this, int32 selectionIndex, int32 startOffset, int32 endOffset);
	[LinkName("QAccessibleTextInterface_CursorPosition")]
	public static extern int32 QAccessibleTextInterface_CursorPosition(void* c_this);
	[LinkName("QAccessibleTextInterface_SetCursorPosition")]
	public static extern void QAccessibleTextInterface_SetCursorPosition(void* c_this, int32 position);
	[LinkName("QAccessibleTextInterface_Text")]
	public static extern char8[] QAccessibleTextInterface_Text(void* c_this, int32 startOffset, int32 endOffset);
	[LinkName("QAccessibleTextInterface_TextBeforeOffset")]
	public static extern char8[] QAccessibleTextInterface_TextBeforeOffset(void* c_this, int32 offset, int64 boundaryType, int32 startOffset, int32 endOffset);
	[LinkName("QAccessibleTextInterface_TextAfterOffset")]
	public static extern char8[] QAccessibleTextInterface_TextAfterOffset(void* c_this, int32 offset, int64 boundaryType, int32 startOffset, int32 endOffset);
	[LinkName("QAccessibleTextInterface_TextAtOffset")]
	public static extern char8[] QAccessibleTextInterface_TextAtOffset(void* c_this, int32 offset, int64 boundaryType, int32 startOffset, int32 endOffset);
	[LinkName("QAccessibleTextInterface_CharacterCount")]
	public static extern int32 QAccessibleTextInterface_CharacterCount(void* c_this);
	[LinkName("QAccessibleTextInterface_CharacterRect")]
	public static extern QRect QAccessibleTextInterface_CharacterRect(void* c_this, int32 offset);
	[LinkName("QAccessibleTextInterface_OffsetAtPoint")]
	public static extern int32 QAccessibleTextInterface_OffsetAtPoint(void* c_this, QPoint point);
	[LinkName("QAccessibleTextInterface_ScrollToSubstring")]
	public static extern void QAccessibleTextInterface_ScrollToSubstring(void* c_this, int32 startIndex, int32 endIndex);
	[LinkName("QAccessibleTextInterface_Attributes")]
	public static extern char8[] QAccessibleTextInterface_Attributes(void* c_this, int32 offset, int32 startOffset, int32 endOffset);
	[LinkName("QAccessibleTextInterface_OperatorAssign")]
	public static extern void QAccessibleTextInterface_OperatorAssign(void* c_this, QAccessibleTextInterface param1);
}
public struct QAccessibleEditableTextInterface
{
	[LinkName("QAccessibleEditableTextInterface_DeleteText")]
	public static extern void QAccessibleEditableTextInterface_DeleteText(void* c_this, int32 startOffset, int32 endOffset);
	[LinkName("QAccessibleEditableTextInterface_InsertText")]
	public static extern void QAccessibleEditableTextInterface_InsertText(void* c_this, int32 offset, char8[] text);
	[LinkName("QAccessibleEditableTextInterface_ReplaceText")]
	public static extern void QAccessibleEditableTextInterface_ReplaceText(void* c_this, int32 startOffset, int32 endOffset, char8[] text);
	[LinkName("QAccessibleEditableTextInterface_OperatorAssign")]
	public static extern void QAccessibleEditableTextInterface_OperatorAssign(void* c_this, QAccessibleEditableTextInterface param1);
}
public struct QAccessibleValueInterface
{
	[LinkName("QAccessibleValueInterface_CurrentValue")]
	public static extern QVariant QAccessibleValueInterface_CurrentValue(void* c_this);
	[LinkName("QAccessibleValueInterface_SetCurrentValue")]
	public static extern void QAccessibleValueInterface_SetCurrentValue(void* c_this, QVariant value);
	[LinkName("QAccessibleValueInterface_MaximumValue")]
	public static extern QVariant QAccessibleValueInterface_MaximumValue(void* c_this);
	[LinkName("QAccessibleValueInterface_MinimumValue")]
	public static extern QVariant QAccessibleValueInterface_MinimumValue(void* c_this);
	[LinkName("QAccessibleValueInterface_MinimumStepSize")]
	public static extern QVariant QAccessibleValueInterface_MinimumStepSize(void* c_this);
	[LinkName("QAccessibleValueInterface_OperatorAssign")]
	public static extern void QAccessibleValueInterface_OperatorAssign(void* c_this, QAccessibleValueInterface param1);
}
public struct QAccessibleTableCellInterface
{
	[LinkName("QAccessibleTableCellInterface_IsSelected")]
	public static extern bool QAccessibleTableCellInterface_IsSelected(void* c_this);
	[LinkName("QAccessibleTableCellInterface_ColumnHeaderCells")]
	public static extern QAccessibleInterface[] QAccessibleTableCellInterface_ColumnHeaderCells(void* c_this);
	[LinkName("QAccessibleTableCellInterface_RowHeaderCells")]
	public static extern QAccessibleInterface[] QAccessibleTableCellInterface_RowHeaderCells(void* c_this);
	[LinkName("QAccessibleTableCellInterface_ColumnIndex")]
	public static extern int32 QAccessibleTableCellInterface_ColumnIndex(void* c_this);
	[LinkName("QAccessibleTableCellInterface_RowIndex")]
	public static extern int32 QAccessibleTableCellInterface_RowIndex(void* c_this);
	[LinkName("QAccessibleTableCellInterface_ColumnExtent")]
	public static extern int32 QAccessibleTableCellInterface_ColumnExtent(void* c_this);
	[LinkName("QAccessibleTableCellInterface_RowExtent")]
	public static extern int32 QAccessibleTableCellInterface_RowExtent(void* c_this);
	[LinkName("QAccessibleTableCellInterface_Table")]
	public static extern QAccessibleInterface QAccessibleTableCellInterface_Table(void* c_this);
	[LinkName("QAccessibleTableCellInterface_OperatorAssign")]
	public static extern void QAccessibleTableCellInterface_OperatorAssign(void* c_this, QAccessibleTableCellInterface param1);
}
